--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,11 +22,10 @@
     <main>
         {{{ body }}}
     </main>
-    <hr>
     <div class="input-group">
-        <input type="text" class="form-control" placeholder="Type a burger" aria-label="" aria-describedby="basic-addon1">
+        <input type="text" id="name" name="burgerName" class="form-control id" placeholder="Type a burger" aria-label="" aria-describedby="basic-addon1">
         <div class="input-group-append">
-            <button class="btn btn-success" type="button">Save it to the menu</button>
+            <button class="btn btn-success" type="button" id="submit">Save it to the menu</button>
         </div>
     </div>
     <hr>
