--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -37,6 +37,7 @@
 
 .input-group {
     margin: auto;
+    margin-top: 30px;
     width: 80%;
     box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.212);
 }
